--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ test:
   image: julia:1.10
   script:
     - |
-      julia --project=@. --heap-size-hint=1G -e '
+      julia --project=@. --heap-size-hint=120M -e '
         using Pkg
         Pkg.build()
         Pkg.test(coverage=true)'
