Should be good enough for now

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 NLPstructures = "adaf1311-06bf-4f71-ac93-2ddf680bb7ce"
+QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
@@ -22,6 +23,7 @@ ForwardDiff = ">= 0.10"
 Ipopt = ">= 1.10"
 Optimization = "~3.19.0, 4"
 OptimizationMOI = ">= 0.5"
+QPALM = "1.0.0"
 SparseArrays = ">= 1.10"
 Symbolics = ">= 6.38"
 Test = "1"
