--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,15 @@ authors = ["Christoph Plate <christoph.plate@ovgu.de>", "Reinhold Wittmann <rein
 version = "0.1.0"
 
 [deps]
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 NLPstructures = "adaf1311-06bf-4f71-ac93-2ddf680bb7ce"
 QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
+SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [weakdeps]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -19,14 +24,18 @@ OptimizationExtension = "Optimization"
 
 [compat]
 ComponentArrays = ">= 0.15"
+DifferentiationInterface = "0.7.14"
 ForwardDiff = ">= 0.10"
 Ipopt = ">= 1.10"
 Optimization = "~3.19.0, 4"
 OptimizationMOI = ">= 0.5"
 QPALM = "1.0.0"
 SparseArrays = ">= 1.10"
+SparseConnectivityTracer = "1.1.3"
+SparseMatrixColorings = "0.4.23"
 Symbolics = ">= 6.38"
 Test = "1"
+Zygote = "0.7.10"
 julia = "1.6 - 1.11"
 
 [extras]
