--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,6 @@ ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [weakdeps]
@@ -22,7 +21,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 NLPstructuresCorleone = ["LuxCore", "Corleone"]
 NLPstructuresCorleoneOED = ["LuxCore", "Corleone", "CorleoneOED"]
 OptimizationExtension = "OptimizationBase"
-SymbolicsHessUtilities = "Symbolics"
+SymbolicsHessUtilities = ["OptimizationBase", "Symbolics"]
 
 [compat]
 ComponentArrays = ">= 0.15"
@@ -31,21 +30,22 @@ EnumX = "1.0.6"
 LuxCore = "1.5.3"
 OptimizationBase = ">= 4.0.0"
 Reexport = "1.2.2"
-SciMLBase = "2.136.0"
 SparseArrays = ">= 1.10"
 Symbolics = ">= 6.38"
 Test = "1"
 julia = "1.6 - 1.11"
 
 [extras]
-ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
-QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
+SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [targets]
-test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff", "Ipopt", "OptimizationMOI", "LinearAlgebra"]
+test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff"]
