--- a/Project.toml
+++ b/Project.toml
@@ -19,35 +19,35 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [extensions]
 NLPstructuresCorleone = ["LuxCore", "Corleone"]
-NLPstructuresCorleoneOED = ["LuxCore", "Corleone", "CorleoneOED"]
 OptimizationExtension = "OptimizationBase"
 SymbolicsHessUtilities = ["OptimizationBase", "Symbolics"]
 
 [compat]
 Aqua = "0.8.14"
 ComponentArrays = ">= 0.15"
+Corleone = ">=0.0.2"
+DifferentiationInterface = ">=0.7.16"
 DocStringExtensions = "0.9.5"
 EnumX = "1.0.6"
+ForwardDiff = "1"
+Ipopt = "1"
+LinearAlgebra = "1"
 LuxCore = "1.5.3"
+Optimization = "5"
 OptimizationBase = ">= 4.0.0"
+OptimizationMOI = "1"
 Reexport = "1.2.2"
 SafeTestsets = "0.1.0"
 SparseArrays = ">= 1.10"
-Symbolics = ">= 6.38"
-Test = "1"
-DifferentiationInterface = ">=0.7.16"
-ForwardDiff = "1"
-Ipopt = "1"
-Optimization = "5"
-OptimizationMOI = "1"
 SparseConnectivityTracer = "1"
 SparseMatrixColorings = ">=0.4.23"
-LinearAlgebra = "1"
-Corleone = "1"
-CorleoneOED = "1"
+Symbolics = ">= 6.38"
+Test = "1"
 julia = "1.6 - 1.11"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
 DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
@@ -59,7 +59,6 @@ SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 
 [targets]
-test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff", "SafeTestsets", "Aqua"]
+test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff", "SafeTestsets", "Aqua", "Corleone"]
