--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,6 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [weakdeps]
 Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
-CorleoneOED = "6590a4b1-d036-41fe-a5b4-03a980244101"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 OptimizationBase = "bca83a33-5cc9-4baa-983d-23429ab6bcbb"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
@@ -36,8 +35,11 @@ LuxCore = "1.5.3"
 Optimization = "5"
 OptimizationBase = ">= 4.0.0"
 OptimizationMOI = "1"
+OrdinaryDiffEq = "6.108.0"
+Random = "1.11.0"
 Reexport = "1.2.2"
 SafeTestsets = "0.1.0"
+SciMLSensitivity = "7.94.0"
 SparseArrays = ">= 1.10"
 SparseConnectivityTracer = "1"
 SparseMatrixColorings = ">=0.4.23"
@@ -52,13 +54,17 @@ DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff", "SafeTestsets", "Aqua", "Corleone"]
+test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff", "SafeTestsets", "Aqua", "Corleone", "OrdinaryDiffEq", "SciMLSensitivity", "LuxCore", "Random"]
