--- a/Project.toml
+++ b/Project.toml
@@ -1,41 +1,70 @@
-name = "blockSQP"
+name = "blockSQP2"
 uuid = "eedde146-038c-472b-a63b-c8c70ebda014"
 authors = ["Christoph Plate <christoph.plate@ovgu.de>", "Reinhold Wittmann <reinhold.wittmann@ovgu.de>"]
 version = "0.1.0"
 
 [deps]
+ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [weakdeps]
-ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
-Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
+LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
+OptimizationBase = "bca83a33-5cc9-4baa-983d-23429ab6bcbb"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [extensions]
-ComponentArraysExtension = "ComponentArrays"
-OptimizationExtension = ["Optimization", "Pkg"]
+NLPlayoutsCorleone = ["LuxCore", "Corleone"]
+OptimizationExtension = "OptimizationBase"
+SymbolicsHessUtilities = ["OptimizationBase", "Symbolics"]
 
 [compat]
-ComponentArrays = "0.15"
-ForwardDiff = "0.10"
-Ipopt = "1.10"
-Optimization = "~3.19.0, 4"
-OptimizationMOI = "0.5"
-SparseArrays = "1.10"
-Symbolics = "6.38"
+Aqua = "0.8.14"
+ComponentArrays = ">= 0.15"
+Corleone = ">=0.0.2"
+DifferentiationInterface = ">=0.7.16"
+DocStringExtensions = "0.9.5"
+EnumX = "1.0.6"
+ForwardDiff = "1"
+Ipopt = "1"
+LinearAlgebra = "1"
+LuxCore = "1.5.3"
+Optimization = "5"
+OptimizationBase = ">= 4.0.0"
+OptimizationMOI = "1"
+OrdinaryDiffEq = "6.108.0"
+Random = "1.11.0"
+Reexport = "1.2.2"
+SafeTestsets = "0.1.0"
+SciMLSensitivity = "7.94.0"
+SparseArrays = ">= 1.10"
+SparseConnectivityTracer = "1"
+SparseMatrixColorings = ">=0.4.23"
+Symbolics = ">= 6.38"
 Test = "1"
 julia = "1.6 - 1.11"
 
 [extras]
-ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
-QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
+SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
+SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff", "Ipopt", "OptimizationMOI", "LinearAlgebra"]
+test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff", "SafeTestsets", "Aqua", "Corleone", "OrdinaryDiffEq", "SciMLSensitivity", "LuxCore", "Random"]
