Fix compat bounds

--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,9 @@ SymbolicsHessUtilities = ["OptimizationBase", "Symbolics"]
 
 [compat]
 Aqua = "0.8.14"
-ComponentArrays = ">=0.15"
-Corleone = ">=0.0.2"
-DifferentiationInterface = ">=0.7.16"
+ComponentArrays = "0.15"
+Corleone = "0.0.2"
+DifferentiationInterface = "0.7.16"
 DocStringExtensions = "0.9.5"
 EnumX = "1.0.6"
 ForwardDiff = "1"
@@ -36,21 +36,21 @@ Ipopt = "1"
 LinearAlgebra = "1"
 LuxCore = "1.5.3"
 OpenBLAS32_jll = "0.3.30"
-Optimization = "5"
-OptimizationBase = ">=4.0.0"
+Optimization = "5.1"
+OptimizationBase = "4, 5"
 OptimizationMOI = "1"
 OrdinaryDiffEq = "6.108.0"
-Random = "1.11.0"
-Reexport = "1.2.2"
+Random = "1.11"
+Reexport = "1.2"
 SafeTestsets = "0.1.0"
-SciMLSensitivity = "7.94.0"
-SparseArrays = ">=1.10"
+SciMLSensitivity = "7.94"
+SparseArrays = "1.10"
 SparseConnectivityTracer = "1"
-SparseMatrixColorings = ">=0.4.23"
-Symbolics = ">=6.38"
+SparseMatrixColorings = "0.4.23"
+Symbolics = "6.38, 7"
 Test = "1"
 blockSQP2_jll = "0.1.0"
-julia = "1.6 - 1.11"
+julia = "1.6"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
